# binar-lang

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.binar
src/: ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  sema.cpp  sema.h  token.h
std/fmt/: fmt.binar
std/mem/: mem.binar
tests/: 01_minimal.binar  02_exit_code.binar  03_variables.binar  04_constants.binar  05_functions.binar  06_multi_return.binar  07_if_else.binar  09_while_loop.binar  100_method_call.binar  101_method_struct_param.binar  103_iface_basic.binar  104_iface_multi_impl.binar  105_iface_method_call.binar  106_iface_pointer_receiver.binar  107_iface_multi_method.binar  108_iface_multi_type.binar  109_iface_chained_mono.binar  10_break.binar  113_raise.binar  114_defer.binar  115_inline_error.binar  116_inline_handle.binar  117_inline_chained_raise.binar  118_inline_nested.binar  119_tail_recur_simple.binar  120_tail_recur_multi_param.binar  121_non_tail_recur_error.binar  122_mutual_recur_error.binar  123_tail_in_if.binar  124_non_iface_recur_ok.binar  125_raise_standalone_ok.binar  126_raise_binding_reject.binar  127_raise_multi_return_ok.binar  128_raise_standalone_reject.binar  129_inline_defer.binar  12_struct.binar  130_inline_defer_raise.binar  131_inline_defer_fallthrough.binar  13_struct_field_write.binar  14_address_of.binar  (+84 more)
tests/102_module_import/: binar.mod  main.binar
tests/102_module_import/math/: math.binar
tests/110_alias/: binar.mod  main.binar
tests/110_alias/math/: math.binar
tests/111_multi_file/: binar.mod  main.binar
tests/111_multi_file/mypkg/: b.binar
tests/112_visibility/: binar.mod  main.binar
tests/112_visibility/mypkg/: a.binar  b.binar
